# debugin

./: .gitignore  AUDIT_INDEX.md  AUDIT_REPORT.md  DELIVERY_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  Makefile  PUSH_TEST.md  README.md  TASK_SPEC.md  TEST_ACCESS.md  TEST_IMPLEMENTATION_STATUS.md  TEST_PLAN.md  pyproject.toml  repomix-archive.md  repomix-output.xml
.github/workflows/: ci.yml
agent-core/: pom.xml
docs/: JAVA.md  JAVA_RUNTIME.md  NODE.md  NODE_RUNTIME.md  PUBLIC_API.md  PYTHON.md  PYTHON_RUNTIME.md  control-plane-api.md  event-schema.md
node_agent/: index.js  package.json
node_agent/src/: condition-evaluator.js  control-api.js  event-client.js  inspector.js  probe-manager.js  rate-limiter.js  snapshotter.js
scripts/: ci_validation.py  event_sink.py
test_support/: e2e_orchestrator.py  event_capture.py
tests/: node_test_plan.js  python_test_plan.py  smoke_test.py  test.js  test_control_api_full.py  test_e2e_all_runtimes.py  test_e2e_complete_suite.py  test_event_path.py  test_event_sink.py  test_event_sink_integration.py  test_ft_runtime.py  test_integration.py  test_node_agent_comprehensive.py  test_node_integration.js  test_nodejs_comprehensive.js  test_probe_helpers.py  test_python_components.py  test_python_integration_full.py
tests/fixtures/: node_app.js  py_app.py
tracepointdebug/: __init__.py  _compat.py  control_api.py
tracepointdebug/broker/: broker_client.py  broker_manager.py
tracepointdebug/engine/: __init__.py  (+3 more)
tracepointdebug_final_library/: package.json
(+27 files in other folders)
